// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/channel_view Should match snapshot if channel is archived 1`] = `
<div>
  <div
    class="app__content"
    id="app-content"
  >
    <div
      class="file-overlay hidden center-file-overlay"
      id="centerChannelFileDropOverlay"
    >
      <div
        class="overlay__indent"
      >
        <div
          class="overlay__circle vertical"
        >
          <img
            alt=""
            class="overlay__files"
            loading="lazy"
            src="fileOverlay.svg"
          />
          Drop a file to upload it.
        </div>
      </div>
    </div>
    <div
      data-channel-id="channelId"
      data-testid="deferred-post-view"
    />
    <div
      class="post-create__container"
      id="post-create"
    >
      <div
        class="channel-archived__message"
        id="channelArchivedMessage"
      >
        You are viewing an 
        <b>
          archived channel
        </b>
        . New messages cannot be posted.
        <button
          class="btn btn-primary channel-archived__close-btn"
        >
          Close Channel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/channel_view Should match snapshot if channel is deactivated 1`] = `
<div>
  <div
    class="app__content"
    id="app-content"
  >
    <div
      class="file-overlay hidden center-file-overlay"
      id="centerChannelFileDropOverlay"
    >
      <div
        class="overlay__indent"
      >
        <div
          class="overlay__circle vertical"
        >
          <img
            alt=""
            class="overlay__files"
            loading="lazy"
            src="fileOverlay.svg"
          />
          Drop a file to upload it.
        </div>
      </div>
    </div>
    <div
      data-channel-id="channelId"
      data-testid="deferred-post-view"
    />
    <div
      class="post-create__container AdvancedTextEditor__ctr"
      id="post-create"
    >
      <div
        class="channel-archived__message"
      >
        You are viewing an archived channel with a 
        <b>
          deactivated user
        </b>
        . New messages cannot be posted.
        <button
          class="btn btn-primary channel-archived__close-btn"
        >
          Close Channel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/channel_view Should match snapshot with base props 1`] = `
<div>
  <div
    class="app__content"
    id="app-content"
  >
    <div
      class="file-overlay hidden center-file-overlay"
      id="centerChannelFileDropOverlay"
    >
      <div
        class="overlay__indent"
      >
        <div
          class="overlay__circle vertical"
        >
          <img
            alt=""
            class="overlay__files"
            loading="lazy"
            src="fileOverlay.svg"
          />
          Drop a file to upload it.
        </div>
      </div>
    </div>
    <div
      data-channel-id="channelId"
      data-testid="deferred-post-view"
    />
    <div
      class="post-create__container AdvancedTextEditor__ctr"
      data-testid="post-create"
      id="post-create"
    />
  </div>
</div>
`;
